# addonfactory-ta-library-python

./: .fossa.yml  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .releaserc  README.md  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: aggreements.yaml  build-test-release.yml  cla.yaml  sr-prepare.sh  sr-release.sh
.reuse/: dep5
splunktalib/: __init__.py  credentials.py  event_writer.py  file_monitor.py  kv_client.py  modinput.py  orphan_process_monitor.py  rest.py  setting.conf  splunk_cluster.py  splunk_platform.py  state_store.py  timer.py  timer_queue.py
splunktalib/common/: consts.py  log.py  pattern.py  util.py  xml_dom_parser.py
splunktalib/concurrent/: __init__.py  concurrent_executor.py  process_pool.py  thread_pool.py
splunktalib/conf_manager/: conf_endpoints.py  conf_manager.py  data_input_endpoints.py  knowledge_objects.py  property_endpoints.py  request.py  ta_conf_manager.py
splunktalib/schedule/: job.py  scheduler.py
splunktalib/tests/: __init__.py  conftest.py
splunktalib/tests/data/package/: README.txt
splunktalib/tests/data/package/default/: eventtypes.conf
splunktalib/tests/splunktaucclib/functional/: test_global_config_save.py  test_rest_handler.py  test_update_with_stars.py
tests/: conftest.py
tests/data/package/default/: app.conf  tags.conf
tests/splunktaucclib/functional/: test_global_config_save.py  test_rest_handler.py
