# SPDX-FileCopyrightText: 2020 Splunk Inc.
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "splunktalib"
version = "0.0.0"
description = "Supporting library for Splunk Add-ons"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"
repository = "https://github.com/splunk/addonfactory-ta-library-python"

[tool.poetry.dependencies]
python = "~2.7 || ^3.7"
sortedcontainers = "^2.2"
httplib2 = "0.19.1"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
mock = [
    { version = "^3", python = "^2.7" },
    { version = "^4", python = "^3.7" }
]
pytest-expect = "^1.1.0"
pytest = [
    { version = "^4.6", python = "^2.7" },
    { version = "^6.0", python = "^3.7" }
]
pytest-cov = "^2"
poetry-dynamic-versioning = { version = "^0.8", python = "^3.7" }
pyyaml = "^5.3"
tomlkit = "^0"
reuse = "*"
black = [
    { version = "20.8b1",  python = "^3.7" }
]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
