#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "splunktalib"
version = "2.2.4"
description = "Supporting library for Splunk Add-ons"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"
repository = "https://github.com/splunk/addonfactory-ta-library-python"

[tool.poetry.dependencies]
python = "^3.7"
sortedcontainers = "^2"
httplib2 = "^0"
defusedxml = "^0"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-cov = "^3"


[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

